# mcp-doc-fill

./: .env.example  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml
tests/: test_docling_tool.py
tools/: docling_tool.py
