[project]
name = "mcp-doc-fill"
version = "0.1.0"
description = "MCP server that extracts text/structure/metadata from PDFs, DOCX, PPTX, and XLSX using Docling"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "docling>=2.44.0",
    "mcp[cli]>=1.13.0",
    "pillow>=11.3.0",
    "pydantic>=2.11.7",
    "pytest>=8.4.1",
]
